EntitySemantics/Generated/AntlrEntityParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.0
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from Grammars\AntlrEntityParser.g4 by ANTLR 4.13.0

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace Strumenta.Entity.Parser {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.0")]
[System.CLSCompliant(false)]
public partial class AntlrEntityParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		KW_CLASS=1, MODULE=2, IMPORT=3, TYPE=4, COLON=5, SEMI=6, COMMA=7, DOT=8, 
		LSQRD=9, RSQRD=10, LCRLY=11, RCRLY=12, LPAREN=13, RPAREN=14, ADD=15, SUB=16, 
		MUL=17, DIV=18, EQ=19, STRING=20, INTEGER=21, BOOLEAN=22, REAL=23, ID=24, 
		COMMENT=25, WS=26;
	public const int
		RULE_module_declaration = 0, RULE_module_import = 1, RULE_type_declaration = 2, 
		RULE_entity_declaration = 3, RULE_feature_declaration = 4, RULE_assignment = 5, 
		RULE_expression = 6, RULE_literal = 7;
	public static readonly string[] ruleNames = {
		"module_declaration", "module_import", "type_declaration", "entity_declaration", 
		"feature_declaration", "assignment", "expression", "literal"
	};

	private static readonly string[] _LiteralNames = {
		null, "'class'", "'module'", "'import'", "'type'", "':'", "';'", "','", 
		"'.'", "'['", "']'", "'{'", "'}'", "'('", "')'", "'+'", "'-'", "'*'", 
		"'/'", "'='"
	};
	private static readonly string[] _SymbolicNames = {
		null, "KW_CLASS", "MODULE", "IMPORT", "TYPE", "COLON", "SEMI", "COMMA", 
		"DOT", "LSQRD", "RSQRD", "LCRLY", "RCRLY", "LPAREN", "RPAREN", "ADD", 
		"SUB", "MUL", "DIV", "EQ", "STRING", "INTEGER", "BOOLEAN", "REAL", "ID", 
		"COMMENT", "WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "AntlrEntityParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static AntlrEntityParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public AntlrEntityParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public AntlrEntityParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class Module_declarationContext : ParserRuleContext {
		public IToken name;
		public Module_importContext _module_import;
		public IList<Module_importContext> _imports = new List<Module_importContext>();
		public Type_declarationContext _type_declaration;
		public IList<Type_declarationContext> _types = new List<Type_declarationContext>();
		public Entity_declarationContext _entity_declaration;
		public IList<Entity_declarationContext> _entities = new List<Entity_declarationContext>();
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode MODULE() { return GetToken(AntlrEntityParser.MODULE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(AntlrEntityParser.ID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Module_importContext[] module_import() {
			return GetRuleContexts<Module_importContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Module_importContext module_import(int i) {
			return GetRuleContext<Module_importContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Type_declarationContext[] type_declaration() {
			return GetRuleContexts<Type_declarationContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Type_declarationContext type_declaration(int i) {
			return GetRuleContext<Type_declarationContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Entity_declarationContext[] entity_declaration() {
			return GetRuleContexts<Entity_declarationContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Entity_declarationContext entity_declaration(int i) {
			return GetRuleContext<Entity_declarationContext>(i);
		}
		public Module_declarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_module_declaration; } }
	}

	[RuleVersion(0)]
	public Module_declarationContext module_declaration() {
		Module_declarationContext _localctx = new Module_declarationContext(Context, State);
		EnterRule(_localctx, 0, RULE_module_declaration);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 16;
			Match(MODULE);
			State = 17;
			_localctx.name = Match(ID);
			State = 21;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==IMPORT) {
				{
				{
				State = 18;
				_localctx._module_import = module_import();
				_localctx._imports.Add(_localctx._module_import);
				}
				}
				State = 23;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 27;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==TYPE) {
				{
				{
				State = 24;
				_localctx._type_declaration = type_declaration();
				_localctx._types.Add(_localctx._type_declaration);
				}
				}
				State = 29;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 33;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==KW_CLASS) {
				{
				{
				State = 30;
				_localctx._entity_declaration = entity_declaration();
				_localctx._entities.Add(_localctx._entity_declaration);
				}
				}
				State = 35;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Module_importContext : ParserRuleContext {
		public IToken name;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IMPORT() { return GetToken(AntlrEntityParser.IMPORT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(AntlrEntityParser.ID, 0); }
		public Module_importContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_module_import; } }
	}

	[RuleVersion(0)]
	public Module_importContext module_import() {
		Module_importContext _localctx = new Module_importContext(Context, State);
		EnterRule(_localctx, 2, RULE_module_import);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 36;
			Match(IMPORT);
			State = 37;
			_localctx.name = Match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Type_declarationContext : ParserRuleContext {
		public IToken name;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode TYPE() { return GetToken(AntlrEntityParser.TYPE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(AntlrEntityParser.ID, 0); }
		public Type_declarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_type_declaration; } }
	}

	[RuleVersion(0)]
	public Type_declarationContext type_declaration() {
		Type_declarationContext _localctx = new Type_declarationContext(Context, State);
		EnterRule(_localctx, 4, RULE_type_declaration);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 39;
			Match(TYPE);
			State = 40;
			_localctx.name = Match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Entity_declarationContext : ParserRuleContext {
		public IToken name;
		public IToken base_class;
		public Feature_declarationContext _feature_declaration;
		public IList<Feature_declarationContext> _features = new List<Feature_declarationContext>();
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode KW_CLASS() { return GetToken(AntlrEntityParser.KW_CLASS, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LCRLY() { return GetToken(AntlrEntityParser.LCRLY, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RCRLY() { return GetToken(AntlrEntityParser.RCRLY, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] ID() { return GetTokens(AntlrEntityParser.ID); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID(int i) {
			return GetToken(AntlrEntityParser.ID, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COLON() { return GetToken(AntlrEntityParser.COLON, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Feature_declarationContext[] feature_declaration() {
			return GetRuleContexts<Feature_declarationContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Feature_declarationContext feature_declaration(int i) {
			return GetRuleContext<Feature_declarationContext>(i);
		}
		public Entity_declarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_entity_declaration; } }
	}

	[RuleVersion(0)]
	public Entity_declarationContext entity_declaration() {
		Entity_declarationContext _localctx = new Entity_declarationContext(Context, State);
		EnterRule(_localctx, 6, RULE_entity_declaration);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 42;
			Match(KW_CLASS);
			State = 43;
			_localctx.name = Match(ID);
			State = 46;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==COLON) {
				{
				State = 44;
				Match(COLON);
				State = 45;
				_localctx.base_class = Match(ID);
				}
			}

			State = 48;
			Match(LCRLY);
			State = 52;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==ID) {
				{
				{
				State = 49;
				_localctx._feature_declaration = feature_declaration();
				_localctx._features.Add(_localctx._feature_declaration);
				}
				}
				State = 54;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 55;
			Match(RCRLY);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Feature_declarationContext : ParserRuleContext {
		public IToken name;
		public IToken type;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] ID() { return GetTokens(AntlrEntityParser.ID); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID(int i) {
			return GetToken(AntlrEntityParser.ID, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public AssignmentContext assignment() {
			return GetRuleContext<AssignmentContext>(0);
		}
		public Feature_declarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_feature_declaration; } }
	}

	[RuleVersion(0)]
	public Feature_declarationContext feature_declaration() {
		Feature_declarationContext _localctx = new Feature_declarationContext(Context, State);
		EnterRule(_localctx, 8, RULE_feature_declaration);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 57;
			_localctx.name = Match(ID);
			State = 58;
			_localctx.type = Match(ID);
			State = 60;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==EQ) {
				{
				State = 59;
				assignment();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AssignmentContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode EQ() { return GetToken(AntlrEntityParser.EQ, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public AssignmentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_assignment; } }
	}

	[RuleVersion(0)]
	public AssignmentContext assignment() {
		AssignmentContext _localctx = new AssignmentContext(Context, State);
		EnterRule(_localctx, 10, RULE_assignment);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 62;
			Match(EQ);
			State = 63;
			expression(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExpressionContext : ParserRuleContext {
		public ExpressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_expression; } }
	 
		public ExpressionContext() { }
		public virtual void CopyFrom(ExpressionContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class Reference_expressionContext : ExpressionContext {
		public ExpressionContext context;
		public IToken target;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(AntlrEntityParser.ID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DOT() { return GetToken(AntlrEntityParser.DOT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public Reference_expressionContext(ExpressionContext context) { CopyFrom(context); }
	}
	public partial class Operator_expressionContext : ExpressionContext {
		public ExpressionContext left;
		public IToken op;
		public ExpressionContext right;
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionContext[] expression() {
			return GetRuleContexts<ExpressionContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionContext expression(int i) {
			return GetRuleContext<ExpressionContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ADD() { return GetToken(AntlrEntityParser.ADD, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SUB() { return GetToken(AntlrEntityParser.SUB, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode MUL() { return GetToken(AntlrEntityParser.MUL, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DIV() { return GetToken(AntlrEntityParser.DIV, 0); }
		public Operator_expressionContext(ExpressionContext context) { CopyFrom(context); }
	}
	public partial class Literal_expressionContext : ExpressionContext {
		[System.Diagnostics.DebuggerNonUserCode] public LiteralContext literal() {
			return GetRuleContext<LiteralContext>(0);
		}
		public Literal_expressionContext(ExpressionContext context) { CopyFrom(context); }
	}

	[RuleVersion(0)]
	public ExpressionContext expression() {
		return expression(0);
	}

	private ExpressionContext expression(int _p) {
		ParserRuleContext _parentctx = Context;
		int _parentState = State;
		ExpressionContext _localctx = new ExpressionContext(Context, _parentState);
		ExpressionContext _prevctx = _localctx;
		int _startState = 12;
		EnterRecursionRule(_localctx, 12, RULE_expression, _p);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 68;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case STRING:
			case INTEGER:
			case BOOLEAN:
			case REAL:
				{
				_localctx = new Literal_expressionContext(_localctx);
				Context = _localctx;
				_prevctx = _localctx;

				State = 66;
				literal();
				}
				break;
			case ID:
				{
				_localctx = new Reference_expressionContext(_localctx);
				Context = _localctx;
				_prevctx = _localctx;
				State = 67;
				((Reference_expressionContext)_localctx).target = Match(ID);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			Context.Stop = TokenStream.LT(-1);
			State = 87;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,8,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( ParseListeners!=null )
						TriggerExitRuleEvent();
					_prevctx = _localctx;
					{
					State = 85;
					ErrorHandler.Sync(this);
					switch ( Interpreter.AdaptivePredict(TokenStream,7,Context) ) {
					case 1:
						{
						_localctx = new Operator_expressionContext(new ExpressionContext(_parentctx, _parentState));
						((Operator_expressionContext)_localctx).left = _prevctx;
						PushNewRecursionContext(_localctx, _startState, RULE_expression);
						State = 70;
						if (!(Precpred(Context, 6))) throw new FailedPredicateException(this, "Precpred(Context, 6)");
						State = 71;
						((Operator_expressionContext)_localctx).op = Match(ADD);
						State = 72;
						((Operator_expressionContext)_localctx).right = expression(7);
						}
						break;
					case 2:
						{
						_localctx = new Operator_expressionContext(new ExpressionContext(_parentctx, _parentState));
						((Operator_expressionContext)_localctx).left = _prevctx;
						PushNewRecursionContext(_localctx, _startState, RULE_expression);
						State = 73;
						if (!(Precpred(Context, 5))) throw new FailedPredicateException(this, "Precpred(Context, 5)");
						State = 74;
						((Operator_expressionContext)_localctx).op = Match(SUB);
						State = 75;
						((Operator_expressionContext)_localctx).right = expression(6);
						}
						break;
					case 3:
						{
						_localctx = new Operator_expressionContext(new ExpressionContext(_parentctx, _parentState));
						((Operator_expressionContext)_localctx).left = _prevctx;
						PushNewRecursionContext(_localctx, _startState, RULE_expression);
						State = 76;
						if (!(Precpred(Context, 4))) throw new FailedPredicateException(this, "Precpred(Context, 4)");
						State = 77;
						((Operator_expressionContext)_localctx).op = Match(MUL);
						State = 78;
						((Operator_expressionContext)_localctx).right = expression(5);
						}
						break;
					case 4:
						{
						_localctx = new Operator_expressionContext(new ExpressionContext(_parentctx, _parentState));
						((Operator_expressionContext)_localctx).left = _prevctx;
						PushNewRecursionContext(_localctx, _startState, RULE_expression);
						State = 79;
						if (!(Precpred(Context, 3))) throw new FailedPredicateException(this, "Precpred(Context, 3)");
						State = 80;
						((Operator_expressionContext)_localctx).op = Match(DIV);
						State = 81;
						((Operator_expressionContext)_localctx).right = expression(4);
						}
						break;
					case 5:
						{
						_localctx = new Reference_expressionContext(new ExpressionContext(_parentctx, _parentState));
						((Reference_expressionContext)_localctx).context = _prevctx;
						PushNewRecursionContext(_localctx, _startState, RULE_expression);
						State = 82;
						if (!(Precpred(Context, 7))) throw new FailedPredicateException(this, "Precpred(Context, 7)");
						State = 83;
						Match(DOT);
						State = 84;
						((Reference_expressionContext)_localctx).target = Match(ID);
						}
						break;
					}
					} 
				}
				State = 89;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,8,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			UnrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public partial class LiteralContext : ParserRuleContext {
		public LiteralContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_literal; } }
	 
		public LiteralContext() { }
		public virtual void CopyFrom(LiteralContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class String_literalContext : LiteralContext {
		public IToken value;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING() { return GetToken(AntlrEntityParser.STRING, 0); }
		public String_literalContext(LiteralContext context) { CopyFrom(context); }
	}
	public partial class Real_literalContext : LiteralContext {
		public IToken value;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode REAL() { return GetToken(AntlrEntityParser.REAL, 0); }
		public Real_literalContext(LiteralContext context) { CopyFrom(context); }
	}
	public partial class Boolean_literalContext : LiteralContext {
		public IToken value;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode BOOLEAN() { return GetToken(AntlrEntityParser.BOOLEAN, 0); }
		public Boolean_literalContext(LiteralContext context) { CopyFrom(context); }
	}
	public partial class Integer_literalContext : LiteralContext {
		public IToken value;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode INTEGER() { return GetToken(AntlrEntityParser.INTEGER, 0); }
		public Integer_literalContext(LiteralContext context) { CopyFrom(context); }
	}

	[RuleVersion(0)]
	public LiteralContext literal() {
		LiteralContext _localctx = new LiteralContext(Context, State);
		EnterRule(_localctx, 14, RULE_literal);
		try {
			State = 94;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case STRING:
				_localctx = new String_literalContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 90;
				((String_literalContext)_localctx).value = Match(STRING);
				}
				break;
			case INTEGER:
				_localctx = new Integer_literalContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 91;
				((Integer_literalContext)_localctx).value = Match(INTEGER);
				}
				break;
			case BOOLEAN:
				_localctx = new Boolean_literalContext(_localctx);
				EnterOuterAlt(_localctx, 3);
				{
				State = 92;
				((Boolean_literalContext)_localctx).value = Match(BOOLEAN);
				}
				break;
			case REAL:
				_localctx = new Real_literalContext(_localctx);
				EnterOuterAlt(_localctx, 4);
				{
				State = 93;
				((Real_literalContext)_localctx).value = Match(REAL);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public override bool Sempred(RuleContext _localctx, int ruleIndex, int predIndex) {
		switch (ruleIndex) {
		case 6: return expression_sempred((ExpressionContext)_localctx, predIndex);
		}
		return true;
	}
	private bool expression_sempred(ExpressionContext _localctx, int predIndex) {
		switch (predIndex) {
		case 0: return Precpred(Context, 6);
		case 1: return Precpred(Context, 5);
		case 2: return Precpred(Context, 4);
		case 3: return Precpred(Context, 3);
		case 4: return Precpred(Context, 7);
		}
		return true;
	}


	public static readonly ATN _ATN =
		new ATNDeserializer().Deserialize(_serializedATN);


}
} // namespace Strumenta.Entity.Parser
